--- a/Xfce.mw
+++ b/Xfce.mw
@@ -1,322 +1,1 @@
-<languages />
-<translate>
-<!--T:1-->
-{{InfoBox stack
-|{{InfoBox homepage|https://xfce.org/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox guide|Xfce}}
-|{{InfoBox gitweb|https://git.xfce.org/|raw=true}}
-|{{InfoBox odoc|https://docs.xfce.org/xfce/start}}
-|{{InfoBox project|Xfce}}
-}}
-
-<!--T:2-->
-To quote [https://xfce.org/ xfce.org]: "Xfce is [[Article description::a lightweight [[desktop environment]] for Unix-like operating systems.]] It aims to be fast and low on system resources, while still being visually appealing and user friendly."
-
-== Installation == <!--T:3-->
-
-=== Avoiding unnecessary dependencies === <!--T:75-->
-
-<!--T:76-->
-Avoiding optional GNOME support and packages will keep the system more lean and congruous. This section is entirely optional; proceed in this manner if the goal is to keep the system small(er) rather than large(r).
-
-<!--T:77-->
-Ensure that the system is using the basic "desktop" [[Profile (Portage)|profile]]:
-
-<!--T:78-->
-{{RootCmd|eselect profile set default/linux/amd64/17.0/desktop}}
-
-<!--T:79-->
-{{Package|app-text/poppler}} have <code>+qt5</code> by default:
-
-<!--T:80-->
-{{FileBox|title=Unset qt5 USE flag for poppler|filename=/etc/portage/package.use/xfce|1=
-app-text/poppler -qt5
-}}
-
-<!--T:81-->
-Of course, <code>-qt5</code> can also be set globally in {{Path|/etc/portage/make.conf}} if one desires.
-
-=== Emerge === <!--T:19-->
-
-<!--T:20-->
-It is time to install the complete Xfce desktop!
-
-<!--T:72-->
-Without explicitly including {{Package|xfce-extra/xfce4-notifyd}} in the {{c|emerge}} command, {{Package|virtual/notification-daemon}} will draw in GNOME's {{Package|x11-misc/notification-daemon}} instead. So install it together with {{Package|xfce-base/xfce4-meta}} and later deselect it so it is not included in the world file:
-
-<!--T:21-->
-{{Emerge|xfce-base/xfce4-meta xfce-extra/xfce4-notifyd}}
-
-<!--T:22-->
-{{Emerge|params+=--deselect{{=}}y|xfce-extra/xfce4-notifyd}}
-
-Alternatively it may work to install {{Package|xfce-extra/xfce4-notifyd}} without adding it to the world file in advance, before {{Package|xfce-base/xfce4-meta}}.
-
-{{Emerge|params+=--oneshot|xfce-extra/xfce4-notifyd}}
-
-{{Emerge|xfce-base/xfce4-meta}}
-
-<!--T:23-->
-Of course, it is also possible to select only needed packages:
-
-<!--T:24-->
-{{Emerge|xfce-base/xfwm4 xfce-base/xfce4-panel}}
-
-== Configuration == <!--T:25-->
-
-=== Display managers === <!--T:27-->
-
-<!--T:28-->
-It is possible to use a display manager to start Xfce. Please refer to the [[display manager]] article to configure a display manager.
-
-<!--T:29-->
-Most display managers use {{Path|*.desktop}} files to configure available sessions. The following is an example desktop file:
-
-<!--T:30-->
-{{FileBox|title=Xfce4 desktop file for display managers|filename=xfce4.desktop|lang=ini|1=
-[Desktop Entry]
-Encoding=UTF-8
-Name=Xfce4
-Comment=Use this session to run Xfce 4 as desktop environment
-Exec=/usr/bin/startxfce4
-Icon=/usr/share/pixmaps/xfce4_xicon1.png
-Type=Application
-}}
-
-<!--T:31-->
-The desktop file can be placed in the right location for the display manager.
-
-=== Starting Xfce without a display manager === <!--T:73-->
-
-<!--T:74-->
-{{c|startx}} and {{c|startxfce4}} are two of the [[X without Display Manager|readily available options]] for starting Xfce without using a display manager.
-
-==== startx ==== <!--T:32-->
-
-<!--T:33-->
-When using {{c|startx}}, create a {{Path|~/.xinitrc}} file with the following contents:
-
-<!--T:34-->
-{{FileBox|title=Starting xfce4 when invoking startx|filename=~/.xinitrc|lang=bash|1=
-exec startxfce4
-}}
-
-<!--T:106-->
-When experiencing authorization or permissions issues within xfce4 in a OpenRC profile (symptoms include being unable to open power manager and unable to suspend/hibernate) be sure the {{Package|sys-auth/consolekit}} package has been merged with the <code>pm-utils</code> USE flag set. Then replace the above line in {{Path|~/.xinitrc}} with the following (see this entry on the [https://forums-lb.gentoo.org/viewtopic-p-7920810.html?sid=e76984319cf592c57047f87ec689c327 Gentoo Forums] for more information):
-
-<!--T:107-->
-{{FileBox|title=Starting xfce4 the right way when invoking startx|filename=~/.xinitrc|lang=bash|1=
-ck-launch-session dbus-launch --sh-syntax --exit-with-session xfce4-session
-}}
-
-==== startxfce4 ==== <!--T:35-->
-
-<!--T:36-->
-To launch the Xfce4 desktop simply type {{c|startxfce4}} at the command-line and press enter:
-
-<!--T:37-->
-{{Cmd|startxfce4}}
-
-<!--T:39-->
-Xfce is a desktop environment and as such can be tuned and tailored to the needs of (almost) every user. In this section, a number of popular (or more challenging) aspects are covered.
-
-=== Volume keys === <!--T:40-->
-
-==== xfce4-volumed ==== <!--T:41-->
-
-<!--T:42-->
-Install {{Package|xfce-extra/xfce4-volumed}} to manage the volume keys  (deprecated - Suggested replacements include {{Package|media-sound/tudor-volumed}} or use key binds in a Window Manager or mixer):
-
-<!--T:43-->
-{{Emerge|xfce-extra/xfce4-volumed}}
-
-<!--T:44-->
-When using pulseaudio with xfce4, use {{Package|xfce-extra/xfce4-volumed-pulse}}:
-
-<!--T:45-->
-{{Emerge|xfce-extra/xfce4-volumed-pulse}}
-
-==== Keyboard shortcuts ==== <!--T:46-->
-
-<!--T:47-->
-Run {{c|xfce4-keyboard-settings}} to bind the following keys:
-
-<!--T:48-->
-* {{Key|volume up}} button: amixer set Master 5%+
-* {{Key|volume down}} button: amixer set Master 5%-
-* {{Key|mute}} button: amixer set Master toggle
-
-=== Consistent GTK+ 3 themes === <!--T:49-->
-
-==== Native Xfce theme engine ==== <!--T:50-->
-
-<!--T:51-->
-Xfce's own theme engine, {{Package|x11-themes/gtk-engines-xfce}}, was updated in version 3.0, which implements native support for GTK+ 3 with no further configuration.
-
-<!--T:52-->
-Assuming that the <code>gtk3</code> USE flag is set, the GTK+ 3 version (revision 300 or higher) should be pulled in by default if {{Package|xfce-base/xfce4-meta}} or {{Package|x11-themes/gtk-engines-xfce}} were installed with a <code>--deep</code> world upgrade.
-
-<!--T:53-->
-If not simply:
-
-<!--T:54-->
-{{Emerge|x11-themes/gtk-engines-xfce}}
-
-<!--T:55-->
-This should pull in the right version of {{Package|x11-themes/gtk-engines-xfce}} through the use of a specific <code>SLOT</code>.
-
-<!--T:56-->
-After emerging the GTK+ 3 version of {{Package|x11-themes/gtk-engines-xfce}}, applications using GTK+ 3 should now blend nicely with applications using GTK+ 2 when one of the native Xfce themes is used.
-
-==== Greybird theme ==== <!--T:57-->
-
-<!--T:58-->
-Another option is to use the [https://github.com/shimmerproject/Greybird Greybird] theme, which has support for GTK+ 2, GTK+ 3, xfwm4, emerald, and metacity:
-
-<!--T:59-->
-{{Emerge|x11-themes/greybird}}
-
-<!--T:60-->
-Go to {{Path|Xfce menu}} -> {{Path|Settings}} -> {{Path|Appearance}}. Or run {{c|xfce4-appearance-settings}}. Select "Greybird" from the "Style" list.
-
-<!--T:61-->
-Now GTK+ 2 and GTK+ 3 applications should have a consistent look.
-
-=== Other themes === <!--T:62-->
-
-<!--T:63-->
-Other themes available in Portage that are compatible with XFCE can be emerged with the following list:
-
-<!--T:64-->
-{{Emerge|x11-themes/clearlooks-phenix x11-themes/gnome-themes-standard x11-themes/gtk-engines-aurora x11-themes/light-themes x11-themes/murrine-themes x11-themes/nimbus x11-themes/oxygen-molecule x11-themes/redhat-artwork x11-themes/shiki-colors x11-themes/tactile3 x11-themes/zukini}}
-
-=== Additional applications === <!--T:65-->
-
-<!--T:66-->
-There are a number of additional applications that are part of Xfce.
-
-<!--T:67-->
-{| class="table table-condensed table-striped" style="width: auto;"
-! scope="col" width="25%" | Package
-! Description
-|-
-| {{Package|x11-terms/xfce4-terminal}}
-| A popular terminal emulator for Xfce; superior to the standard {{c|xterm}} program.
-|-
-| {{Package|xfce-base/xfce4-appfinder}}
-| Application finder.
-|-
-| {{Package|xfce-base/thunar}}
-| Xfce's file manager.
-|-
-| xfce-extra/xfce4-mixer
-| Volume control. (deprecated and removed from Gentoo - Pulseaudio users can install {{Package|xfce-extra/xfce4-pulseaudio-plugin}}.  Others can install {{Package|media-sound/volumeicon}} or similar tray audio mixer)
-|-
-| {{Package|xfce-extra/thunar-volman}}
-| Manages removable media and drives.
-|-
-| {{Package|xfce-extra/tumbler}}
-| File previewer for Thunar.
-|-
-| {{Package|xfce-extra/thunar-archive-plugin}}
-| Plugin for Thunar to work with archives; uses {{Package|app-arch/file-roller}}.
-|-
-| {{Package|xfce-extra/xfce4-battery-plugin}}
-| Displays battery percentage, time remaining, power source (AC or battery), fan status, warnings, and can even be configured to execute commands at certain power levels, which can be used to put the laptop into hibernate mode when the battery is almost exhausted.
-|-
-| {{Package|xfce-extra/xfce4-verve-plugin}} 
-| A small command line embedded into the panel; quicker than opening up another terminal to run a command.
-|-
-| {{Package|xfce-extra/xfce4-mount-plugin}}
-| One-click mounting of devices listed in [[fstab|{{Path|/etc/fstab}}]].
-|-
-| {{Package|xfce-extra/xfce4-sensors-plugin}}
-| Monitor hardware sensors, such as CPU temperature, fan RPM, hard drive temp, motherboard voltage, and more.
-|-
-| {{Package|x11-themes/xfwm4-themes}}
-| Several window-manager themes.
-|-
-| {{Package|xfce-extra/xfce4-power-manager}}
-| An application to monitor and manage power usage (especially important for laptops). Choose maximum-performance or battery-saving modes. Adjust screen brightness and setup hibernate, suspend, and shutdown actions (i.e., when the lid is shut or buttons are pressed). Can warn when the battery reaches certain levels, or even turn off the machine. Includes panel plugins to display battery/charging status, and control brightness.
-|}
-
-<!--T:108-->
-The following applications work well in Xfce and round out a basic desktop environment.
-
-<!--T:109-->
-{| class="table table-condensed table-striped" style="width: auto;"
-! scope="col" width="25%" | Package
-! Description
-|-
-| {{Package|app-editors/mousepad}}
-| Lightweight text editor.
-|-
-| {{Package|app-cdr/xfburn}}
-| CD burning application.
-|-
-| {{Package|x11-misc/alacarte}}
-| GNOME's menu editor works fine in Xfce.
-|-
-| {{Package|x11-terms/tilda}}
-| Lightweight quake-style terminal emulator.
-|-
-| {{Package|app-office/orage}}
-| Simple calendar.
-|}
-
-== Troubleshooting == <!--T:86-->
-
-=== Enable vertical window snapping === <!--T:94-->
-
-<!--T:95-->
-Most modern desktop environments have vertical window snapping enabled by default. This is also possible in Xfce, but not by default. To enable, navigate to: {{Path|Settings}} → {{Path|Window manager}} → {{Path|Advanced tab}}.
-
-<!--T:96-->
-* Make sure the "Snap windows to screen border" checkbox has been ''checked''.
-* Make sure the checkboxes under "Wrap workspaces when reaching the screen edge" have been ''unchecked''. These interfere with vertical window snapping.
-
-<!--T:97-->
-Once the checkboxes are set it should be now possible to drag a window to the right or left side of the screen, which should cause the window to resize to 50% of the screen width.
-
-<!--T:98-->
-Keyboard shortcuts can be set in order to do this via the typical {{Key|Super}}+{{Key|←}} or {{Key|Super}}+{{Key|→}} behavior. Navigate to {{Path|Settings}} → {{Path|Window manager}} → {{Path|Keyboard tab}}.
-
-<!--T:99-->
-Set the "Tile window to the left" and "Tile window to the right" actions with the {{Key|Super}}+{{Key|←}} and {{Key|Super}}+{{Key|→}} key combinations respectively.
-
-=== Audio mixer complains about missing pavucontrol binary === <!--T:102-->
-
-<!--T:103-->
-Clicking the speaker (audio) icon in the panel and then selecting {{Path|Audio mixer...}} results in a message saying "pavucontrol binary not found".
-
-<!--T:104-->
-The solution is to install {{Package|media-sound/pavucontrol}}:
-
-<!--T:105-->
-{{Emerge|media-sound/pavucontrol}}
-
-=== Program starting hotkeys are not working / Colors not changeable from appearance === <!--T:87-->
-
-<!--T:100-->
-Xfce can have hotkeys for both starting an application as well as modifying the behavior of an already running application or setting. An example of behavior hotkey is the {{Key|Ctrl}}+{{Key|Alt}}+{{Key|D}} combination, which minimizes all windows to show the deskop (and vice-versa).
-
-<!--T:101-->
-Assuming that hotkeys for starting an application (such as {{Key|Alt}}+{{Key|F2}} to start the application finder) are not working, while the application can be started from the menu, then Consolekit is not running. Start it, and make sure that it gets started at boot time:
-
-<!--T:91-->
-{{RootCmd|/etc/init.d/consolekit start}}
-
-<!--T:92-->
-{{RootCmd|rc-update add consolekit default}}
-
-<!--T:93-->
-This will also start D-Bus, a prerequisite for Consolekit. Restart X to enjoy the new hotkeys and colors.
-
-== See also == <!--T:68-->
-
-<!--T:69-->
-* {{See also|Xfce/Guide}}
-
-</translate>
-[[Category:Desktop environment]]
+== Autostart ==
