Initial SELinux page

--- a/SELinux.mw
+++ b/SELinux.mw
@@ -1,181 +1,3 @@
-SELinux is a mandatory access control system which enables a more fine-grained mechanism where the security administrator defines what a user can do. Unlike the standard discretionary access control in place for Linux (where the end user can still decide for himself how his resources are accessed by others) a mandatory access control system is fully governed through a security policy. With SELinux, enforcement of the access controls is done by the Linux kernel, governed through a security policy that is loaded at start of the system.
-<div style="width:60%; padding-right: 3%; float: left;">
-__NOTOC__
-== Introduction ==
+'''SELinux is a mandatory access control system which enables a more fine-grained access control mechanism as well as allow the security administrator to define what a user can do and can't. Unlike the standard discretionary access control in place for Linux (which means that the end user can still share files he shouldn't share, allow others to have write access to his files, etc.) a mandatory access control system is fully governed through a security policy.'''
 
-<div style="float: right;">[[File:Police.png|128px|link=]]</div>
-
-Linux has a well-known ''discretionary'' access control system, based on the permission mask set on resources and the ownership of the resource versus the run-time privileges of a process. Some additional security features are available as well, such as capabilities and extended ACLs, which allow administrators to fine-tune the secure state of their system. But even all those features still prove to be discretionary in their model.
-
-A discretionary model means that the owner of a resource can still decide how the resource is shared on the system. A directory can be made world-writable by its owner, and from that point onward all processes on the system can write to the directory. With a ''mandatory'' access control system, the access to resources is governed through a mandatory system that cannot be worked around from. With SELinux, this is the SELinux security subsystem running in the Linux kernel.
-
-== SELinux resources ==
-
-A [[SELinux/Quick_introduction|quick introduction to SELinux]] helps to have a high-level idea behind the SELinux security subsystem. It covers the difference between discretionary and mandatory access control, the [[SELinux/Labels|labeled]] approach that SELinux takes and how it is integrated in the Linux operating system.
-
-For more in-depth information, please refer to the following resources.
-
-{| class="table table-striped table-condensed" style="width: auto;"
-! scope="col" width="25%" | Concepts
-!
-|-
-| [[SELinux/Type_enforcement|Type enforcement]]
-| Controlling accesses is done in most cases through a type-enforcement based approach
-|-
-| [[SELinux/Role-based_access_control|Role-based access control]]
-| Ensuring a least privilege approach on a Linux system using SELinux' RBAC model
-|-
-| [[SELinux/User-based_access_control|User-based access control]]
-| Ensuring segregation of users, even when they run using the same domains and accessing the same types
-|-
-| [[SELinux/Information_flow_control|Information flow control]]
-| Limiting information flow based on security clearance and sensitivities
-|-
-| [[SELinux/Unconfined_domains|Unconfined domains]]
-| When SELinux protections are not needed in all cases, unconfined domains can be used.
-|-
-! scope="col" width="25%" | User guides
-!
-|-
-| [[SELinux/Installation|Installation]]
-| The main resource for installing and enabling SELinux on a Gentoo system
-|-
-| [[SELinux/Users_and_logins|Users and logins]]
-| Mapping Linux users (logins) to SELinux users
-|-
-| [[SELinux/Labels|Managing labels]]
-| Setting and configuring file (and other resource) labels
-|-
-| [[SELinux/Policy|Policy]]
-| The SELinux policy defines the acceptable behavior on a system; it can be rebuilt by administrators, loaded and unloaded (through its modular design) and tweaked by adding more policy rules
-|-
-| [[SELinux/Logging|Logging]]
-| SELinux usually logs denials in the audit log (or system log if no auditing is enabled)
-|-
-| [[SELinux/Booleans|Booleans]]
-| Enable or disable additional policy controls through SELinux booleans
-|-
-| [[SELinux/States|States]]
-| SELinux can be enabled or disabled, and running in enforcing, partial permissive or full permissive mode
-|-
-!  scope="col" width="25%" | Expert documentation
-!
-|-
-| [[Project:SELinux/Development|Policy development]]
-| Updating SELinux policy to suit your needs, and send patches to Gentoo or even upstream projects
-|-
-| [[SELinux/Policy_store|Policy store]]
-| The policy store contains the SELinux policy binaries; multiple stores can be defined on a system
-|-
-| [[SELinux/Networking|Networking support]]
-| SELinux supports port labeling, but also packet-based access controls through SECMARK and peer-to-peer labeling support
-|-
-! scope="col" width="25%" | Reference material
-!
-|-
-| [[SELinux/FAQ|FAQ]]
-| Frequently Asked Questions on SELinux and SELinux integration in Gentoo
-|-
-| [[SELinux/Language|SELinux policy language]]
-| Supported SELinux language constructs
-|-
-| [[SELinux/Module_list|Policy module specific information]]
-| More in-depth information about particular SELinux policy modules
-|}
-
-== Development ==
-
-For engineers and developers, we provide the following resources:
-
-{| class="table table-striped table-condensed" style="width: auto;"
-! scope="col" width="25%" | Upstream projects
-! 
-|-
-| [[SELinux/LSM|Linux Security Modules]]
-| The integration of SELinux in the Linux kernel is done through the LSM subsystem
-|-
-| [[SELinux/Reference_policy|Reference policy]]
-| All Linux distributions base their SELinux policies on the reference policy
-|-
-| [[SELinux/Userspace_project|SELinux userspace project]]
-| The software that engineers and administrators use to work with SELinux
-|-
-! scope="col" width="25%" | Gentoo Linux integration
-!
-|-
-| [[Project:SELinux|Gentoo SELinux project]]
-| Project site of the Gentoo SELinux project
-|-
-| [[SELinux/Gentoo_profiles|Profiles]]
-| Enabling SELinux support in default Gentoo profiles
-|-
-| [[SELinux/Gentoo_policy_packages|Policy packages]]
-| Information on how the Gentoo packages push out SELinux policies to a system
-|}
-
-== Learning SELinux ==
-
-We also provide the following resources to gradually learn about SELinux.
-
-{| class="table table-striped table-condensed" style="width: auto;"
-! scope="col" width="25%" | Online resources
-!
-|-
-| [[SELinux/Tutorials|SELinux tutorials]]
-| More than a dozen small tutorials that introduce you to SELinux and its Gentoo integration
-|}
-
-</div>
-
-<div style="width: 40%; float: left;">
-
-== News ==
-
-{{News|date=July 01, 2018|header=Refpolicy policies 2.20180701 are now available|body=
-On July 1st, the Reference Policy Project released the 2.20180701 version of the SELinux policies. Gentoo now includes those policies (~arch for now), ready for testing.
-}}
-
-{{News|date=January 18, 2018|header=Refpolicy policies 2.20180114 are now available|body=
-On January 14th, the Reference Project released the 2.20180114 version of the SELinux policies. Gentoo now includes those policies (~arch for now), ready for testing.
-}}
-
-{{News|date=April 10, 2017|header=Refpolicy policies 2.20170204 are now available|body=
-On February 4th, the Reference Project released the 2.20170204 version of the SELinux policies. After some testing, we now have the policies available in Gentoo (stable for {{Keyword|x68}} and {{Keyword|amd64}}).
-}}
-
-== SELinux in Gentoo ==
-
-The integration of SELinux in Gentoo is handled by the [[Project:SELinux|SELinux]] subproject of the [[Project:Hardened|Gentoo Hardened]] project.
-
-'''Problems with SELinux in Gentoo?''' 
-
-* [https://bugs.gentoo.org Report a bug] in Bugzilla
-
-'''Want some help?'''
-
-* Try the [http://news.gmane.org/gmane.linux.gentoo.hardened gentoo-hardened] mailinglist
-* Call out to us through IRC on freenode's {{IRC|gentoo-hardened|mode=webchat}} channel.
-
-== Support state ==
-
-'''SELinux user space:'''
-
-* [https://github.com/SELinuxProject/selinux/wiki/Releases Upstream]: 2.8 (stable)
-* [https://packages.gentoo.org/packages/sys-libs/libselinux Gentoo]: 2.8 (stable)
-
-'''SELinux policies:'''
-
-* [https://github.com/SELinuxProject/refpolicy/releases Upstream]: 2.20180701
-* [https://packages.gentoo.org/package/sec-policy/selinux-base Gentoo]: 2.20180701-r1 (testing)
-</div>
-
-<div style="width:90%; padding-right: 3%; float: left;">
-
-== External resources ==
-
-* [http://www.nsa.gov/research/_files/selinux/papers/inevit-abs.shtml The Inevitability of Failure: The Flawed Assumption of Security in Modern Computing Environments] explains the need for mandatory access controls
-* [http://www.nsa.gov/research/_files/selinux/papers/flask-abs.shtml The Flask Security Architecture: System Support for Diverse Security Policies] explains the security architecture of Flask, the architecture used by SELinux.
-
-</div>
-
-[[Category:SELinux]] [[Category:Meta]]
+With SELinux, which works ''alongside'' the standard discretionary access control system (the DAC system is first checked and only when this would allow an activity, then SELinux is queried as well), processes run inside what it calls a ''domain''. Privileges are then assigned to a domain to define the allowed interactions with other resources (be it processes, other domains, files, sockets, capabilities, file contexts, semaphores, messages, ...).
