Information about KEYWORDS variable

--- a/KEYWORDS.mw
+++ b/KEYWORDS.mw
@@ -1,53 +1,7 @@
-In an ebuild the <var>KEYWORDS</var> variable informs in which architectures the ebuild is stable or still in testing phase.
+'''The KEYWORDS variable as set in an ebuild informs the package manager for which architectures the ebuild is installable as well as if the ebuild is considered stable or still in testing phase.'''
 
-== Examples ==
+An example KEYWORDS setting:
+<pre>
+KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd"</pre>
 
-The following example contains some possible values for the <var>KEYWORDS</var> variable:
-
-{{FileBox|filename=example.ebuild|lang=bash|1=
-KEYWORDS="alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd"
-}}
-
-See the {{Path|/var/db/repos/gentoo/profiles/arch.list}} for a list of keywords.
-
-The prefix <code>~</code> (a tilde character) placed in front of various architectures in the example above means that architecture is in a "testing phase" and is not ready for production usage.
-
-=== Special keywords ===
-
-In addition to the normal <var>KEYWORDS</var> values Portage supports three special tokens:
-
-* <code>*</code> - Package is visible if it is stable on any architecture.
-* <code>~*</code> - Package is visible if it is in testing on any architecture.
-* <code>**</code> - Package is always visible (<var>KEYWORDS</var> are ignored completely).
-
-If you encounter the <code>-*</code> KEYWORD, this indicates that the package is known to be broken on all systems which are not otherwise listed in KEYWORDS. For example, a binary only package which is built for the {{Keyword|x86}} will look like:
-
-{{RootCmd|equery meta fdftk|output=<pre>
- * app-text/fdftk [gentoo]
-Maintainer:  robbat2@gentoo.org
-Maintainer:  tex@gentoo.org (Gentoo TeX Project)
-Upstream:    None specified
-Homepage:    http://www.adobe.com/devnet/acrobat/fdftoolkit.html
-Location:    /var/portage/repos/gentoo/app-text/fdftk
-Keywords:    6.0-r1:0: x86 -*
-License:     Adobe
-</pre>}}
-
-If you wish to accept this package anyways, then use one of the other keywords in the {{Path|package.accept_keywords}} like this:
-
-{{FileBox|filename=/etc/portage/package.accept_keywords|1=
-app-text/fdftk amd64
-}}
-
-For detailed information see the portage(5) man page.
-
-== See also ==
-
-* {{See also|Stable request}}
-* {{See also|Package testing}}
-
-== External resources ==
-
-* [https://devmanual.gentoo.org/keywording/ Gentoo Development Guide: Keywording]
-
-[[Category:Portage]]
+The prefix <code>~</code> is used to inform the package manager that the ebuild should be considered in "testing phase" and not ready for production usage just yet.
