--- a/ACCEPT_KEYWORDS.mw
+++ b/ACCEPT_KEYWORDS.mw
@@ -1,65 +1,9 @@
-<languages />
-<translate>
-
-<!--T:1-->
 {{DISPLAYTITLE:ACCEPT_KEYWORDS}}
+'''The ACCEPT_KEYWORDS variable informs the package manager which ebuilds' [[KEYWORDS]] values it is allowed to accept. The variable is usually set through the Gentoo profile but can be overruled in the users' <code>/etc/make.conf</code> file or even on the command line.'''
 
-<!--T:7-->
-{{Metadata|abstract=The ACCEPT_KEYWORDS variable informs the package manager which ebuilds' KEYWORDS values it is allowed to accept.}}
+The default value of most profiles' ACCEPT_KEYWORDS variable is the architecture itself, like <code>ACCEPT_KEYWORDS="amd64"</code> or <code>ACCEPT_KEYWORDS="arm"</code>. In these cases, the package manager will only accept ebuilds whose KEYWORDS variable contains this architecture. If the user wants to be able to install and work with ebuilds that are not considered production-ready yet, he can add the same architecture but with the <code>~</code> prefix to it, like so:
 
-<!--T:2-->
-The <var>ACCEPT_KEYWORDS</var> variable informs the package manager which ebuilds' <var>[[KEYWORDS]]</var> values it is allowed to accept.
+{{File|/etc/make.conf||<pre>
+ACCEPT_KEYWORDS="amd64 ~amd64"</pre>}}
 
-== Where the variable is set? == <!--T:9-->
-
-<!--T:8-->
-The variable is usually set through the Gentoo [[Profile (Portage)|profile]] but can be overruled in the users' {{Path|[[:/etc/portage/make.conf]]}} file, per-package in the {{Path|[[:/etc/portage/package.accept_keywords]]}} file/directory or even on the command line.
-
-<!--T:6-->
-{{Important|It is generally considered a bad idea to override the <var>ACCEPT_KEYWORDS</var> variable on the command line, as this is not persistent and might result in unwanted behavior from the package manager.}}
-
-== Stable and unstable keywords == <!--T:10-->
-
-<!--T:3-->
-The default value of most profiles' <var>ACCEPT_KEYWORDS</var> variable is the architecture itself, like <code>amd64</code> or <code>arm</code>. In these cases, the package manager will only accept ebuilds whose <var>KEYWORDS</var> variable contains this architecture. If the user wants to be able to install and work with ebuilds that are not considered production-ready yet, they can add the same architecture but with the <code>~</code> prefix to it, like so:
-
-<!--T:4-->
-{{FileBox|filename=[[:/etc/portage/make.conf]]|lang=bash|1=
-ACCEPT_KEYWORDS="~amd64"
-}}
-
-<!--T:5-->
-One should not specify the stable keyword (<code>amd64</code>) when adding the testing keyword (<code>~amd64</code>) because <var>ACCEPT_KEYWORDS</var> is an incremental variable.
-
-<!--T:11-->
-If the setting is not to be made system-wide, then it can be set per-package in the {{Path|package.accept_keywords}} file or directory:
-
-<!--T:12-->
-{{FileBox|filename=[[:/etc/portage/package.accept_keywords]]|1=
-# games
-games-fps/doomsday ~amd64
-}}
-
-<!--T:13-->
-In addition to the normal values from <var>ACCEPT_KEYWORDS</var>, {{Path|package.accept_keywords}} supports three special tokens<ref>Gentoo Portage, [https://dev.gentoo.org/~zmedico/portage/doc/man/portage.5.html Manual page for Portage]. Retrieved on January 30th, 2015.</ref>:
-
-<!--T:18-->
-* <code>*</code> — Package is visible if it is stable on any architecture.
-* <code>~*</code> — Package is visible if it is in testing on any architecture.
-* <code>**</code> — Package is always visible (<var>KEYWORDS</var> are ignored completely).
-
-<!--T:14-->
-The last choice is useful for live package versions (which are SVN/Git/Mercurial/… versions of packages, supported through what is called a live ebuild and which don't have a <var>KEYWORDS</var> variable).
-
-== See also == <!--T:16-->
-
-<!--T:17-->
-* [[Knowledge Base:Accepting a keyword for a single package]]
-
-== References == <!--T:15-->
-
-</translate>
-
-{{reflist}}
-
-[[Category:Portage]]
+It is generally considered a bad idea to override the ACCEPT_KEYWORDS variable on the command line, as this is not persistent and might result in unwanted behavior from the package manager.
