--- a/Ebuild.mw
+++ b/Ebuild.mw
@@ -1,37 +1,5 @@
-<languages />
-<translate>
+'''An ebuild file is a text file, used by Gentoo package managers, which identify a specific software title and how the Gentoo package manager should handle it. It uses a bash-like syntax style and is standardized through the [[EAPI]] version.'''
 
+Gentoo Linux uses ebuilds as the package management format for individual software titles. These ebuilds contain metadata about the software (what is the name and version of the software, which license does it use, what is its home page), dependency information (both build-time as well as run-time dependencies) and instructions on how to deal with the software (configure, build, install, test ...).
 
-{{lowercase title}}
-{{InfoBox stack
-|{{InfoBox wikipedia|Ebuild|header=true}}
-}}
-
-<onlyinclude>An {{Path|ebuild}} file is a text file, used by Gentoo package managers, which identifies a specific software package and how the Gentoo package manager should handle it. It uses a bash-like syntax style and is standardized through the [[EAPI]] version.
-
-Gentoo Linux uses ebuilds as the package management format for individual software titles. These ebuilds contain metadata about the software (the name and version of the software, which license the software uses, and the home page), dependency information (both build-time as well as run-time dependencies), and instructions on how to deal with the software (configure, build, install, test ...).</onlyinclude>
-
-The default location for ebuilds in Gentoo is {{Path|[[:/var/db/repos/gentoo]]/}}.
-
-{{c|ebuild}} is also the [[Portage]] command for running the various [https://devmanual.gentoo.org/ebuild-writing/functions/ ebuild functions]. Information can be found locally by running:
-
-{{Cmd
-|man 1 ebuild
-|man 5 ebuild
-}}
-
-== See also ==
-
-* {{See also|Basic guide to write Gentoo Ebuilds}}
-* {{See also|Submitting ebuilds}}
-* {{See also|Package Manager Specification}}
-* {{See also|Portage}}
-
-== External resources ==
-
-* https://devmanual.gentoo.org/eclass-reference/ebuild/index.html - Ebuild eclass reference in the developer manual.
-* https://projects.gentoo.org/comrel/recruiters/quizzes/ebuild-quiz.txt - Gentoo developer ebuild quiz.
-
-</translate>
-
-[[Category:Portage]]
+More information about the ebuild format is available on the [http://devmanual.gentoo.org/ebuild-writing/index.html Ebuild Writing section] in the [http://devmanual.gentoo.org Gentoo Developers Manual] as well as in the [http://www.gentoo.org/proj/en/qa/pms.xml Package Manager Specification].
